# poetry-etl-template

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
